[tool.poetry]
name = "aeza1password"
version = "0.1.0"
description = "CLI tool for syncing servers from aeza.net to 1password"
repository = "https://github.com/nikolai-in/aeza1password"
authors = ["nikolai.in <nikolai-in@dousen.ru>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
black = "^23.11.0"
bandit = "^1.7.5"
pygments = "^2.16.1"
darglint = "^1.8.1"
isort = "^5.12.0"
pyupgrade = "^3.15.0"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
